# memory-cli

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
crates/memory-cli/: Cargo.toml
crates/memory-cli/src/: main.rs
crates/memory-core/: Cargo.toml
crates/memory-core/src/: lib.rs
debian/: changelog  control  rules
windows/: README.md  installer.nsi
